move stuff around...

--- a/core/about-us/history.txt
+++ b/core/about-us/history.txt
@@ -52,9 +52,58 @@ by YieldMore.org
 
 # 2018
 
-# Thinking of a Trust (NGO / Charity)
+## Thinking of a Trust (NGO / Charity)
 
 [Indian Trusts Act YM](https://www.vakilno1.com/bareacts/indiantrustsact/indiantrustsact.html)
+
+ # Where YieldMore.org was in 2018
+
+[DOTS](/dots1-2018/) AND [LAUNCH](/launch-2018/)
+
+<strong>simply love<strong>
+
+> "We commit ourselves to personal growth and self-expression and encourage people to discover the joy of living inspired purposeful lives." - Imran
+
+<div class="box-colour-2018">Learn
+ - Heal
+ - Share
+ - Emote
+ - Express
+ - Love
+ - Yield More
+</div>
+
+
+## Brochure Back
+> I stand here today tired of divides and clutter and the negative. If one man can dare us all to rebuild the universe and another says "lets make the world work", then what more unalloyed joy than in trying?
+>
+> I'm far from knowing much but that didn't stop Jimmy Wales. So I say let's collaborate and give shape to our collective dreams - that of peace, knowing, loving and doing.
+>
+> Jnana, Bhakti and Karma, - the 3 paths to communion with the Divine Godhead within us all.
+>
+> We have a mission to complete, a new height to reach, a balance to be found - personally, as a community and as a species. Our's is just another movement in that direction.
+
+## Brochure Inner
+
+Movements - causes we care about.
+
+ - Curation - the best songs, books, movies and poems we've accumulated. With excerpts, summaries and links to buy.
+ - Express - articles and videos by people who write for us / we've been in touch with.
+ - Ideas - ideas of import from religions, metaphysics and philosophy.
+ - Promote - Helping improve someone's quality of life? We will engage with you and promote you.
+ - Learn - skills, hobbies, recreational activities, art, education, vocational development, organizational excellence.
+ - Heal - health, healing and medicine, natural remedies, parenting, counselling, psychology, leadership, harmony.
+ - Share - helping other people with our time, love & resources.
+
+## 4 Channels
+
+<div class="row">
+<div class="col-md-6 col-12 box-colour-one"><h3>PACT</h3>People's Alliance for Children and Teachers<br />(NOW NOM)<br /><br />...trying to unite people<br />& impart well-rounded<br />knowledge & individualistic<br />thinking amongst our youth</div>
+<div class="col-md-6 col-12 box-colour-two"><h3>YSPT</h3>YieldMore School for Positive Thinking<br />(NOW SERENITY)<br /><br />they search their whole lives<br />for that inner space, to bring<br />them closer to perfection”<br />- Jimmy Messina</div>
+<div class="col-md-6 col-12 box-colour-three"><h3>JSW</h3>Journals of Social Work<br />(NOW SOULFUL MOONLIGHT)<br /><br />a social worker and a counsellor to<br />be made accessible to every school child<br />[and adult] everywhere!<br />Prof PJ Naidu</div>
+<div class="col-md-6 col-12 box-colour-four"><h23>PW</h3>Peaceworks & Snaploy<br />(NOW EVOLVING SUNLIGHT)<br /><br />mentoring, training,<br />guiding and counselling!<br />becoming better at<br />work... and life...</div>
+</div>
+
 
 # 2017
 
